feat(animations): introduce new loading animations and update asset references
- Added new loading animations: BounceLoading, ECGLoading, and TruckLoading, with corresponding styles and SVG graphics.
- Updated index.html to reference new favicon and apple-touch-icon images.
- Refactored Suspense component to support the new BounceLoading animation and added loading shape options.
- Removed obsolete TruckLoading styles from components directory, consolidating styles within the animations module.
- Updated various pages to utilize the new loading animations for improved user experience during loading states.

--- a/console/index.html
+++ b/console/index.html
@@ -14,8 +14,8 @@
   <meta name="robots" content="noindex, nofollow" />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="/logo.ico" />
-  <link rel="apple-touch-icon" href="/name.png" />
+  <link rel="icon" type="image/x-icon" href="/logo_g.ico" />
+  <link rel="apple-touch-icon" href="/image.png" />
   <link rel="canonical" href="https://console.nfx.com/" />
 
   <!-- Language Alternates -->
